almost done with the first draft...

--- a/Tex/bibliography.tex
+++ b/Tex/bibliography.tex
@@ -91,4 +91,10 @@ Scattering with the MicroBooNE detector,
   Muon momentum measurement via Multiple Coulomb Scattering in argon,
   MicroBooNE Doc-DB-4050.
 
+\bibitem{CCIncInternalNote}
+An et al,
+Selection of charged-current $\nu_\mu$ inclusive events - Internal Note,
+MicroBooNE Doc-DB-5851
+\url{http://microboone-docdb.fnal.gov:8080/cgi-bin/RetrieveFile?docid=5851&filename=cc-incl-neutrino2016-v2.7.pdf&version=9}
+
 \end{thebibliography}
