--- a/Tex/conclusions.tex
+++ b/Tex/conclusions.tex
@@ -4,5 +4,7 @@ will pull ideas from Josh's outline, plus some of this:
 \item MCS is important for UB and for all other LArTPC detectors
 \item we looked at contained tracks and demonstrated MCS works both in MC and data even in complicated detector conditions
 \item demonstrated our tool works and that the highland formula is right
-\item MCS has other uses like track direction, broken tracks, maybe pion/muon separation
+\item MCS has other uses like track direction, broken tracks, PID
 \end{enumerate}
+
+plots to include are: MCS bias plot with three overlaid: MCTrack single muon, MC BNB, real BNB. then the MCS resolution plot with those same three overlaid. Those might be ``money'' plots for the paper.
